# alienware-rgb-native

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launch.sh
.github/workflows/: ci.yml
assets/icons/: alienware-rgb-icon.metadata.json
calibration/: README.md  aw3423dwf-zone-map-20260508.json
config/: README.md  events.json  runtime_events.json  voice.json
docs/: event-triggers.md  project-notes.md
resources/: alienware_rgb.qrc
scripts/: collect-diagnostics  install-runtime  rgb-event-broker  rgb-pulse  runtime-smoke  test-diagnostics-redaction  test-rgb-pulse-routing  test-runtime-broker  test-runtime-smoke  uninstall-runtime  validate-runtime-contract  verify-runtime-config
src/: main.cpp  protocol.h
src/animator/: animator.cpp  animator.h  effects.cpp  effects.h
src/cli/: commands.cpp  commands.h  main.cpp
src/controller/: awelc_controller.cpp  awelc_controller.h
src/gui/: diagnostics_dialog.cpp  diagnostics_dialog.h  discovery_wizard.cpp  discovery_wizard.h  event_dialog.cpp  event_dialog.h  main_window.cpp  main_window.h  zone_accordion.cpp  zone_accordion.h  zone_card_delegate.cpp  zone_card_delegate.h  zone_filter_proxy.cpp  zone_filter_proxy.h  zone_list_model.cpp  zone_list_model.h
src/models/: config_paths.cpp  config_paths.h  event_preset.cpp  event_preset.h  profile.cpp  profile.h  zone.h  zone_map.cpp  zone_map.h
src/transport/: hid_lock.cpp  hid_lock.h  hid_transport.cpp  hid_transport.h
src/worker/: hid_worker.cpp  hid_worker.h
tests/: core_tests.cpp
